comentario no docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: "3"
 services:
 
    rundeck:
+      #servico rundeck
       image: rewerdj/rundeck-wagner
       #image: rundeck
       hostname: 192.168.56.105.nip.io
